<resources>
    <string name="app_name">Clase2</string>
    <string name="username_input_placeholder">Usuario</string>
    <string name="password_input_placeholder">Contraseña</string>
    <string name="login_prompt_title">Log In</string>
    <string name="register_prompt_title">Register</string>
    <string name="login_prompt_submit">Log In</string>
    <string name="register_prompt_submit">Register</string>
    <string name="login_lost_password">Perdiste tu contraseña?</string>
    <string name="login_no_account">No tienes cuenta? Registrate</string>
    <string name="register_has_account">Ya tienes cuenta? Log in</string>
    <string name="main_return">Volver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>