<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterPrompt">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3883b4"
        android:elevation="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registerFrameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_prompt_title"
            android:textAlignment="center"
            android:textColor="@color/mainText"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/registerUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/username_input_placeholder"
            android:inputType="text"
            android:padding="11dp"
            android:textColor="@color/mainText"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/registerPassInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/password_input_placeholder"
            android:inputType="text"
            android:padding="11dp"
            android:password="true"
            android:textColor="@color/mainText"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mainText"
            android:text="@string/register_prompt_submit"
            android:textColor="@color/secondaryText"
            app:cornerRadius="5dp" />

        <TextView
            android:id="@+id/registerHasAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/register_has_account"
            android:textAlignment="center"
            android:textColor="@color/mainText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

</FrameLayout>